[project]
name = "langgraph-research-agent"
version = "0.1.0"
description = "A clean, expandable LangGraph research agent using LangChain, LangGraph, and Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=1.2.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "agents", "graphs", "utils"]

[tool.uv]
dev-dependencies = []
